--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    // them binding
+    buildFeatures{
+        viewBinding true
+    }
 
     buildTypes {
         release {
