--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,20 @@
         android:theme="@style/Theme.BAN_DT_LT"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".Cac_Loai_San_Pham.Laptop"
+            android:exported="false" />
+        <activity
+            android:name=".Cac_Loai_San_Pham.DienThoai"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Xu_Ly_Giao_Dien.DrawerBaseActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
