--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.BAN_DT_LT"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".Cac_Loai_San_Pham.NguoiDung"
+            android:exported="false" />
+        <activity
+            android:name=".Cac_Loai_San_Pham.NguoiDung"
+            android:exported="false" />
+        <activity
+            android:name=".Cac_Loai_San_Pham.GioHang"
+            android:exported="false" />
         <activity
             android:name=".Cac_Loai_San_Pham.Laptop"
             android:exported="false" />
