--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -10,15 +10,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.BAN_DT_LT"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".Cac_Loai_San_Pham.NguoiDung"
+            android:name=".Quan_Tri_Vien.DanhSachTaiKhoan"
             android:exported="false" />
         <activity
-            android:name=".Cac_Loai_San_Pham.NguoiDung"
+            android:name=".Xu_Ly_Danh_Sach.chi_tiet_san_pham"
             android:exported="false" />
         <activity
-            android:name=".Cac_Loai_San_Pham.GioHang"
+            android:name=".Nguoi_Dung.DatHang"
+            android:exported="false" />
+        <activity
+            android:name=".Nguoi_Dung.NguoiDung"
             android:exported="false" />
         <activity
             android:name=".Nguoi_Dung.GioHang"
