--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.BAN_DT_LT"
         tools:targetApi="31">
         <activity
+            android:name=".Quan_Tri_Vien.DanhSachDatHang"
+            android:exported="false" />
+        <activity
+            android:name=".Quan_Tri_Vien.DanhSachXacNhan"
+            android:exported="false" />
+        <activity
             android:name=".Quan_Tri_Vien.DanhSachTaiKhoan"
             android:exported="false" />
         <activity
